--- a/package.json
+++ b/package.json
@@ -19,14 +19,5 @@
         "lodash": "^4.17.4",
         "vue": "^2.5.7"
     },
-    "dependencies": {
-        "jquery-countto": "^1.2.0",
-        "jquery-waypoints": "^2.0.5",
-        "jquery.easing": "^1.4.1",
-        "jquery.stellar": "^0.6.2",
-        "magnific-popup": "^1.1.0",
-        "owl.carousel": "^2.3.4",
-        "simplycountdown.js": "^1.3.1",
-        "stellar.js": "^0.6.5"
-    }
+    "dependencies": {}
 }
